# nouns-graffiti-oracle

./: .gitignore  Cargo.toml  README.md  succinct.json
circuits/: Cargo.toml  hints.rs  v1.rs
circuits/src/: hints.rs  main.rs
contracts/script/: NounsOracleV1.s.sol  NounsRaffle.s.sol  deploy.sh  request.sh  verify.sh
contracts/src/: NounsOracleV1.sol  NounsRaffle.sol
